--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 * {
-    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* comment out later */
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background: content-box radial-gradient(limegreen, green);
+    width: 100vw;
     min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
@@ -37,6 +41,35 @@ img {
     width: 100px;
     height: 100px;
     transform-style: preserve-3d;
+}
+
+.card-container {
+    width: 300px;
+    height: 400px;
+}
+.card {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+}
+
+.card-container:hover .card {
+    transform: rotateY(180deg);
+}
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+.card-front {
+    background-color: #333;
+    color: #fff;
+}
+.card-back {
+    background-color: #517fa4;
+    color: #fff;
+    transform: rotateY(180deg);
 }
 
 .facedown {
