--- a/style.css
+++ b/style.css
@@ -84,7 +84,8 @@ img {
 }
 .player-box {
     display: flex;
-    /* align-items: center; */
+    flex-flow: column wrap;
+    align-items: center;
     justify-content: center;
     width: 50%;
     height: auto;
