--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: content-box radial-gradient(rgb(103, 233, 103), rgb(7, 161, 7));
+    background: content-box radial-gradient(#67E967, #07A107);
     width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -24,10 +24,10 @@ header {
 .text-outline {
     color: #000;
     text-shadow:
-      -.8px -.8px 0 #f0872b, /* Top-left shadow */
-      .8px -.8px 0 #f0872b,  /* Top-right shadow */
-      -2.7px 2.7px 0 #f0872b,  /* Bottom-left shadow */
-      .8px .8px 0 #f0872b;   /* Bottom-right shadow */
+      -.8px -.8px 0 #F4A261, /* Top-left shadow */
+      .8px -.8px 0 #F4A261,  /* Top-right shadow */
+      -2.7px 2.7px 0 #F4A261,  /* Bottom-left shadow */
+      .8px .8px 0 #F4A261;   /* Bottom-right shadow */
   }
 
 #board {
@@ -98,7 +98,8 @@ img {
     width: 50%;
     height: auto;
     margin: auto;
+    font-size: 1.6rem;
 }
 .player--active {
-    background-color: aquamarine;
+    background-color: #C8BFC7;
 }
