--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: content-box radial-gradient(#67E967, #07A107);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: content-box #282c3c;
     width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -17,17 +17,18 @@ body {
 }
 
 header {
-    font-family: cursive;
+    /* font-family: cursive; */
+    font-weight: 600;
     font-size: 4rem;
     margin: 1rem auto;
 }
 .text-outline {
-    color: #000;
+    color: #fff;
     text-shadow:
-      -.8px -.8px 0 #F4A261, /* Top-left shadow */
-      .8px -.8px 0 #F4A261,  /* Top-right shadow */
-      -2.7px 2.7px 0 #F4A261,  /* Bottom-left shadow */
-      .8px .8px 0 #F4A261;   /* Bottom-right shadow */
+      -.8px -.8px 0 #994B0B, /* Top-left shadow */
+      .8px -.8px 0 #994B0B,  /* Top-right shadow */
+      -2.7px 2.7px 0 #994B0B,  /* Bottom-left shadow */
+      .8px .8px 0 #994B0B;   /* Bottom-right shadow */
   }
 
 #board {
@@ -101,5 +102,5 @@ img {
     font-size: 1.6rem;
 }
 .player--active {
-    background-color: #C8BFC7;
+    background-color: #BCD8C1;
 }
