--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: content-box #282c3c;
+    background: content-box #212431;
     width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -23,7 +23,7 @@ header {
     margin: 1rem auto;
 }
 .text-outline {
-    color: #fff;
+    color: #eeeeee;
     text-shadow:
       -.8px -.8px 0 #994B0B, /* Top-left shadow */
       .8px -.8px 0 #994B0B,  /* Top-right shadow */
@@ -71,12 +71,12 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #e6e6e6;
     transform: rotateY(180deg);
 }
 .card-back {
     background-image: url('/image-sets/animals/cardback-zoo.png');
-    background-color: #d9ff96;
+    background-color: #e6e6e6;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -95,12 +95,16 @@ img {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 50%;
-    height: auto;
+    height: 11.1rem;
     margin: auto;
-    font-size: 1.6rem;
+    padding: 1rem;
+    font-size: 2.1rem;
+    font-weight: 600;
+    color: #cfe6d3;
 }
 .player--active {
     background-color: #BCD8C1;
+    color: #212431;
 }
