--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* comment out later */
+    box-sizing: border-box; /*comment out later*/
 }
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: content-box #212431;
+    background: content-box #181B25;
     width: 100vw;
     min-height: 100vh;
     display: flex;
@@ -20,7 +20,21 @@ header {
     /* font-family: cursive; */
     font-weight: 600;
     font-size: 4rem;
-    margin: 1rem auto;
+    margin: .5rem auto;
+}
+#win-message {
+    margin: auto;
+    padding: 0 20px 10px;
+    position: absolute;
+    top: 6.3rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #181B25;
+    color: #E9F0E4;
+    font-size: 5rem;
+    border: 5px solid #994B0B;
+    border-radius: 20px;
+    z-index: 1;
 }
 .text-outline {
     color: #eeeeee;
@@ -45,7 +59,6 @@ img {
 
 .card-container {
     margin: 9px;
-    padding: 3px;
     width: 200px;
     height: 200px;
     perspective: 2700px;
@@ -53,8 +66,10 @@ img {
 .card {
     width: 100%;
     height: 100%;
+    border: 5px solid #994B0B;
     transition: transform 1s;
     transform-style: preserve-3d;
+    border-radius: 25px;
 }
 
 .card-container.face-up .card {
@@ -65,6 +80,7 @@ img {
     position: absolute;
     width: 100%;
     height: 100%;
+    border-radius: 20px;
     backface-visibility: hidden;
 }
 .card-front {
@@ -87,7 +103,8 @@ img {
 #scores {
     display: flex;
     flex-flow: row wrap;
-    margin: 5px auto;
+    justify-content: space;
+    margin: 0 auto 10px;
     width: 100%;
     height: 9rem;
 }
@@ -96,15 +113,16 @@ img {
     flex-flow: column wrap;
     align-items: center;
     justify-content: flex-start;
-    width: 50%;
-    height: 11.1rem;
+    width: 49%;
+    height: 100%;
     margin: auto;
-    padding: 1rem;
+    padding: .7rem;
     font-size: 2.1rem;
     font-weight: 600;
-    color: #cfe6d3;
+    color: #E9F0E4;
 }
 .player--active {
-    background-color: #BCD8C1;
-    color: #212431;
+    background-color: #E9F0E4;
+    color: #181B25;
+    font-weight: 660;
 }
