--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ img {
     justify-content: space;
     margin: 0 auto 10px;
     width: 100%;
-    height: 9rem;
+    height: 8rem;
 }
 .player-box {
     display: flex;
@@ -117,6 +117,7 @@ img {
     height: 100%;
     margin: auto;
     padding: .7rem;
+    border-radius: 20px;
     font-size: 2.1rem;
     font-weight: 600;
     color: #E9F0E4;
@@ -125,4 +126,7 @@ img {
     background-color: #E9F0E4;
     color: #181B25;
     font-weight: 660;
+}
+.player--winner {
+    background-color: #75FACE;
 }
