--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box; /*comment out later*/
 }
+:root {
+    --player-0-color: #FDC3DE;
+    --player-0-border: #FB88BE;
+    --player-1-color: #C4D4C4;
+    --player-1-border: #A0BAA0;
+}
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -121,13 +127,32 @@ img {
     border-radius: 20px;
     font-size: 2.1rem;
     font-weight: 600;
-    color: #e6e6e6;
 }
-.player--active {
-    background-color: #e6e6e6;
+
+#player-0 {
+    color: var(--player-0-color)
+}
+#player-1 {
+    color: var(--player-1-color)
+}
+#player-0.player--active {
+    background-color: var(--player-0-color);
     color: #181B25;
     font-weight: 660;
 }
+#player-1.player--active {
+    background-color: var(--player-1-color);
+    color: #181B25;
+    font-weight: 660;
+}
+
+.border-0 {
+    border: 5px solid var(--player-0-border);
+}
+.border-1 {
+    border: 5px solid var(--player-1-border);
+}
+
 .player--winner {
     background-color: #75FACE;
 }
