--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ header {
     z-index: 1;
     position: absolute;
     top: 5rem;
-    height: calc(100% - 4.5rem);
-    width: 100%;
+    height: calc(100vh - 5rem);
+    width: 100vw;
     background-color: #181B25;
 }
 
@@ -42,14 +42,20 @@ header {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    padding: 4.2rem;
+    justify-content: space-between;
+    padding: 2.2rem;
 }
 .menu-button:hover {
     cursor: pointer;
 }
 .menu-button {
+    border-radius: 20px;
+    border: 5px solid #4CA9A9;
+    margin: 2rem;
+    padding: 0 22px 8px;
     background-color: #e6e6e6;
-    font-size: 3.6rem;
+    font-size: 3rem;
+    font-weight: 500;
 }
 
 #postgame-popup {
