--- a/style.css
+++ b/style.css
@@ -99,14 +99,14 @@ header {
     font-size: 2rem;
     font-weight: 600;
     color: #FC5736;
-    cursor: pointer;
+    cursor: pointer;    
 }
 
 #sets-menu {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding-bottom: 8rem;
     color: #e6e6e6;
 }
